fix: overflow x added to html and body tags to fix bug 1.1

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
     font-family: 'Jost', sans-serif;
-
+    
 
 }
-
+html, body{
+    overflow-x: hidden;
+}
 header {
     position: sticky;
     z-index: 999;
